package switch2021.project.dto;

public class IdDTO {
    public String id;
}
